--- a/src/index.html
+++ b/src/index.html
@@ -14,20 +14,17 @@
         <div class="traffic__subtitle">Sign-up for our 30-day trial. No credit card required.</div>
 
         <form action="#" class="form">
-            <div class="form__text">10K PAGEVIEWS<div class='form__price'><span>$8.00</span>/ month</div></div>
+            <div class="form__text"></div>
             
             <div class="slider">
-                <input data-slider type="range" name="range" min="0" max="100" step="25" value="50">
-                <div class="triangle">
-                    <button class="left"><img src="icons/left.png" alt="left"></button>
-                    <button class="right"><img src="icons/right.png" alt="right"></button>
-                </div>
+                <input data-slider type="range" name="range" min="0" max="100" step="25" value="100">
+
             </div>
                 
             <div class="check">
                 Monthly Billing
                 <input type="checkbox" id="checked">
-                <label  class="checkbox" for="checked">Yearly Billing</label> 
+                <label class="checkbox" for="checked">Yearly Billing</label> 
                 <div class="discount">25% discount</div>
             </div>
 
