--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Traffic pricing</title>
+    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -17,7 +18,7 @@
             <div class="form__text"></div>
             
             <div class="slider">
-                <input data-slider type="range" name="range" min="0" max="100" step="25" value="100">
+                <input data-slider type="range" name="range" min="0" max="100" step="25">
 
             </div>
                 
