--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <body>
     <main class="traffic">
         <h1 class="title">Simple, traffic-based pricing</h1>
-        <div class="traffic__subtitle">Sign-up for our 30-day trial. No credit card required.</div>
+        <div class="traffic__subtitle">Sign-up for our 30-day trial. <br> No credit card required.</div>
 
         <form action="#" class="form">
             <div class="form__text"></div>
@@ -20,7 +20,7 @@
             <input class="slider" data-slider type="range" name="range" min="0" max="100" step="25">
 
             <div class="check">
-                Monthly Billing
+                <div class="check__monthly">Monthly Billing</div> 
                 <input type="checkbox" id="checked">
                 <label class="checkbox" for="checked">Yearly Billing</label>
                 <div class="check__discount">25% discount</div>
